--- a/src/features/lecturer/courses/views/components/CoursesHeader/CoursesHeader.scss
+++ b/src/features/lecturer/courses/views/components/CoursesHeader/CoursesHeader.scss
@@ -1,5 +1,8 @@
 @import "../../../../../../theme/styles/global/variables";
 @import "../../../../../../theme/styles/global/font_variables";
+@import "../../../../../../theme/styles/global/breakpoints";
+@import '@mixins';
+@import '@breakpoints';
 
 .courses-header {
     display: flex;
@@ -13,4 +16,24 @@
         flex-grow: 1;
         text-align: left;
     }
+}
+
+@include respond-to(xxl) {}
+
+@include respond-to(xl) {
+}
+
+@include respond-to(lg) {
+}
+
+@include respond-to(md) {
+}
+
+@include respond-to(sm) {
+}
+
+@include respond-to(xs) {
+}
+
+@include respond-to(xxs) {
 }
