--- a/src/features/lecturer/course-detail/views/components/CourseActions/CourseActions.scss
+++ b/src/features/lecturer/course-detail/views/components/CourseActions/CourseActions.scss
@@ -1,20 +1,18 @@
+// @import '@variables';
+// @import '@font_variables';
+// @import '@mixins';
+// @import '@breakpoints';
+// Use @use instead of @import with optional namespace aliases
 @use '../../../../../../theme/styles/global/variables' as vars;
 @use '../../../../../../theme/styles/global/font_variables' as fonts;
 @use '../../../../../../theme/styles/global/mixins' as mixins;
 @use '../../../../../../theme/styles/global/breakpoints' as breakpoints;
 
-.courses-header {
+.course-actions {
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    padding: 2rem;
-    border: 1px solid vars.$border-color;
-    border-radius: 1rem;
-
-    &__title {
-        flex-grow: 1;
-        text-align: left;
-    }
+    padding: 1rem;
+    gap: 1rem;
 }
 
 @include mixins.respond-to(xxl) {}
@@ -25,7 +23,12 @@
 
 @include mixins.respond-to(md) {}
 
-@include mixins.respond-to(sm) {}
+@include mixins.respond-to(sm) {
+    .course-actions {
+        flex-direction: column;
+        align-items: stretch;
+    }
+}
 
 @include mixins.respond-to(xs) {}
 
