--- a/src/theme/styles/global/_breakpoints.scss
+++ b/src/theme/styles/global/_breakpoints.scss
@@ -1,8 +1,9 @@
-// _breakpoints.scss
-$breakpoint-xxl: 2560px;
-$breakpoint-xl: 1440px;
-$breakpoint-lg: 1024px;
-$breakpoint-md: 768px;
-$breakpoint-sm: 425px;
-$breakpoint-xs: 375px;
-$breakpoint-xxs: 320px;
+$breakpoints: (
+  xxl: 2560px,
+  xl: 1440px,
+  lg: 1024px,
+  md: 768px,
+  sm: 425px,
+  xs: 375px,
+  xxs: 320px
+);
