--- a/src/features/lecturer/course-detail/views/components/CourseDetailInfo/CourseDetailInfo.scss
+++ b/src/features/lecturer/course-detail/views/components/CourseDetailInfo/CourseDetailInfo.scss
@@ -4,45 +4,41 @@
 @use '../../../../../../theme/styles/global/breakpoints' as breakpoints;
 
 .course-info {
-    padding: 1.5rem;
     display: flex;
     flex-direction: column;
-    gap: 1.5rem;
+    gap: 1rem;
 
     &__header {
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-
-        &-image {
-             width: 100%;
-             height: auto;
-
-             img {
-                object-fit: cover;
-                border-radius: 1rem;
-             }
-        }
-    }
-
-    &__upload {
-        display: flex;
-        gap: 1rem;
-
-        button {
-            min-width: 100px;
-        }
-    }
-
-    &__learning-goals {
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-
-        .course-info__goal-item {
+        &-left {
             display: flex;
-            align-items: center;
-            gap: 1rem;
+            flex-direction: column;
+            gap: 1.5rem;
+        }
+
+        &-right {
+            display: flex;
+            flex-direction: column;
+            gap: 0.5rem;
+
+            &-image{
+                width: 100%;
+                height: auto;
+   
+                img {
+                   object-fit: cover;
+                   border-radius: 1rem;
+                }
+            }
+
+            &-btn {
+                width: 100%;
+            }
+        }
+    }
+
+    &__learning {
+        &-title {
+            margin-bottom: 1rem;
         }
     }
 
