💄 [style]: Update style for course detail page

--- a/src/features/lecturer/course-detail/views/components/CourseDetailInfo/CourseDetailInfo.scss
+++ b/src/features/lecturer/course-detail/views/components/CourseDetailInfo/CourseDetailInfo.scss
@@ -36,9 +36,20 @@
         }
     }
 
-    &__learning {
+    &__section {
         &-title {
             margin-bottom: 1rem;
+        }
+
+        &__item {
+            display: flex;
+            flex-direction: row;
+            gap: 1rem;
+            justify-content: space-between;
+        }
+
+        &__btn {
+            margin-top: 1rem;
         }
     }
 
